test/e2e/fixtures/minimal-app.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-webapp
  namespace: test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-webapp
  template:
    metadata:
      labels:
        app: my-webapp
    spec:
      containers:
      - name: my-webapp
        image: nginxinc/nginx-unprivileged:1.29-alpine-perl
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: "/usr/share/nginx/html"
          readOnly: true
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      volumes:
      - name: config
        configMap:
          name: index-file
          items:
          - key: "index.html"
            path: "index.html"

---

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prod-web
  namespace: test-app
spec:
  gatewayClassName: cloud-provider-kind
  listeners:
  - protocol: HTTP
    port: 80
    name: prod-web-gw
    allowedRoutes:
      namespaces:
        from: Same

---

apiVersion: v1
kind: Service
metadata:
  name: simple-app-service
  namespace: test-app
spec:
  selector:
    app: my-webapp
  ports:
  - port: 8080
    targetPort: 8080

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: simple-app-route
  namespace: test-app
spec:
  parentRefs:
    - name: prod-web
  hostnames:
    - "simple-app.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: simple-app-service
          port: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: modelsrv-service
  namespace: emeland-k8s-system
spec:
  selector:
    app: my-webapp
  ports:
  - port: 8080
    targetPort: 8080

---

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prod-web
  namespace: emeland-k8s-system
spec:
  gatewayClassName: cloud-provider-kind
  listeners:
  - protocol: HTTP
    port: 80
    name: prod-web-gw
    allowedRoutes:
      namespaces:
        from: Same

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: modelsrv-route
  namespace: emeland-k8s-system
spec:
  parentRefs:
    - name: prod-web
  hostnames:
    - "modelsrv.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: modelsrv-service
          port: 8080
